--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-414.5KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活1天)香港-3.41MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇺🇸 美国-3.83MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.35MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-751.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-820.5KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.14MB/s(Youtube:不良林), server: 104.243.25.95, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-751.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-820.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-751.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-820.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-751.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-820.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.41MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-751.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-820.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-751.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-820.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-751.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-820.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-545.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-751.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-820.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
